# rust-axum-101

./: .env  .gitignore  Cargo.toml
.sqlx/: query-0a3cbcbcf8c8f3f1b8d6fe9e344221482b7a5296991668a2b09d2f19162b1de1.json  query-130877899ddc446686347b32be6c81578fce7aca6c787d44c794458915896dfe.json  query-3f7a62be5f3700035397a54a8cfab9e1df4cdc6bed5fb9abcac84bb69a226354.json  query-a2857e3715b7e85b5998dc79aa82e889dd9287aad149e4e658a618d91f52a01a.json
infra/: docker-compose.yaml
migrations/: 20260206064703_create_products.sql  20260206064741_create_users.sql
src/: main.rs  server.rs
src/app/: api_doc.rs  mod.rs  routes.rs  state.rs
src/app/config/: config.rs  error.rs
src/app/middleware/: trace.rs
src/domain/products/: entities.rs  handlers.rs  mod.rs  routes.rs  usecases.rs
src/domain/schools/dtos/: create.rs
src/domain/schools/entities/: school.rs
src/domain/users/: api_doc.rs  entities.rs  handlers.rs  mod.rs  routes.rs  usecases.rs
src/domain/users/dtos/: create.rs  mod.rs  response.rs  update.rs
src/domain/users/entities/: mod.rs  name_entity.rs  people_name.rs  user_domain.rs  user_entity.rs
src/infra/database/: connect.rs  init_db.rs  mod.rs  setup.rs
src/shared/: error.rs  extractors.rs  mod.rs  response.rs
src/shared/security/: password.rs
src/shared/types/: hash.rs  locale.rs  mod.rs  people_name.rs  result.rs
