[package]
name = "crud-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "ansi"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
anyhow = "1.0.101"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15.7"
thiserror = "2.0"
